small horizontal scroll fixed

--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ article {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+
 }
 
 .nav-text:hover a {
@@ -1569,6 +1569,12 @@ button:hover .star-6 {
 
     }
 
+    .arrow-mark-card-left:hover,
+    .arrow-mark-card-right:hover {
+        filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.5));
+        transform: scale(0.9);
+    }
+
     .inside-card-h3 {
         font-size: 3.5vh;
     }
@@ -1611,11 +1617,11 @@ button:hover .star-6 {
         flex-direction: column;
     }
 
-    .spacing-box{
+    .spacing-box {
         flex-direction: column;
     }
 
-    #download-brochure{
+    #download-brochure {
         margin-left: 0;
         margin-top: 8vh;
     }
